implemented businessobjects in different way